--- a/Granusoft/src/main.kv
+++ b/Granusoft/src/main.kv
@@ -40,6 +40,7 @@
 #:import PlotScreen view.screens.main.testing.PlotScreen
 #:import HeightSensor view.screens.main.testing.HeightSensor
 #:import FolderScreen view.screens.main.testing.FolderScreen
+#:import TestFoldersScreen view.screens.main.testing.TestFoldersScreen
 
 #:import CameraMainScreen view.screens.camera.CameraMainScreen
 #:import CameraFeedScreen view.screens.camera.CameraFeedScreen
@@ -93,6 +94,7 @@
     PlotScreen:
     HeightSensor:
     FolderScreen:
+    TestFoldersScreen:
 
     # Camera Interface
     CameraMainScreen:
