--- a/Granusoft/src/view/screens/main/TestingScreen.kv
+++ b/Granusoft/src/view/screens/main/TestingScreen.kv
@@ -27,7 +27,7 @@
             GranuSideButton:
                 text: "Tests"
                 on_release:
-                    root.move_to('tests_screen') # Move to tests screen
+                    root.move_to('test_folders_screen') # Move to tests screen
             GranuSideButton:
                 text: 'Back'
 	    		on_release:
