Height Sensor Confirmation clean-up

--- a/Granusoft/src/main.kv
+++ b/Granusoft/src/main.kv
@@ -38,7 +38,7 @@
 #:import HeightScreen view.screens.main.testing.HeightScreen
 #:import OperatorScreen view.screens.main.testing.OperatorScreen
 #:import PlotScreen view.screens.main.testing.PlotScreen
-#:import HeightSensor view.screens.main.testing.HeightSensor
+#:import HeightSensorConfirmation view.screens.main.testing.HeightSensorConfirmation
 #:import FolderScreen view.screens.main.testing.FolderScreen
 #:import TestFoldersScreen view.screens.main.testing.TestFoldersScreen
 
@@ -92,7 +92,7 @@
     HeightScreen:
     OperatorScreen:
     PlotScreen:
-    HeightSensor:
+    HeightSensorConfirmation:
     FolderScreen:
     TestFoldersScreen:
 
