Folder functionality complete
View, Delete, Rename

--- a/Granusoft/src/main.kv
+++ b/Granusoft/src/main.kv
@@ -38,9 +38,11 @@
 #:import HeightScreen view.screens.main.testing.HeightScreen
 #:import OperatorScreen view.screens.main.testing.OperatorScreen
 #:import PlotScreen view.screens.main.testing.PlotScreen
-#:import HeightSensorConfirmation view.screens.main.testing.HeightSensorConfirmation
+#:import HeightSensor view.screens.main.testing.HeightSensor
 #:import FolderScreen view.screens.main.testing.FolderScreen
 #:import TestFoldersScreen view.screens.main.testing.TestFoldersScreen
+#:import DeleteFolderConfirmation view.screens.main.testing.DeleteFolderConfirmation
+#:import RenameFolderScreen view.screens.main.testing.RenameFolderScreen
 
 #:import CameraMainScreen view.screens.camera.CameraMainScreen
 #:import CameraFeedScreen view.screens.camera.CameraFeedScreen
@@ -48,6 +50,7 @@
 #:import ImagesViewScreen view.screens.camera.ImagesViewScreen
 #:import CameraSettingsScreen view.screens.camera.CameraSettingsScreen
 #:import ImageDeleteConfirmation view.screens.camera.ImageDeleteConfirmation
+
 
 # Load each screen into the ScreenManager. For human convenience, screens are
 # grouped into like-screens
@@ -92,9 +95,11 @@
     HeightScreen:
     OperatorScreen:
     PlotScreen:
-    HeightSensorConfirmation:
+    HeightSensor:
     FolderScreen:
     TestFoldersScreen:
+    DeleteFolderConfirmation:
+    RenameFolderScreen:
 
     # Camera Interface
     CameraMainScreen:
