Live Height Reading (Test Screen)

--- a/Granusoft/src/main.kv
+++ b/Granusoft/src/main.kv
@@ -11,6 +11,7 @@
 #:import MainScreen view.screens.main.MainScreen
 #:import SettingsScreen view.screens.main.SettingsScreen
 #:import TestingScreen view.screens.main.TestingScreen
+#:import TestingScreenAuto view.screens.main.TestingScreenAuto
 
 #:import ColorsScreen view.screens.settings.ColorsScreen
 #:import NoteScreen view.screens.settings.NoteScreen
@@ -64,6 +65,7 @@
     MainScreen:
     SettingsScreen:
     TestingScreen:
+    TestingScreenAuto:
 
     # Settings
     ColorsScreen:
