--- a/Granusoft/src/view/screens/main/TestingScreenAuto.kv
+++ b/Granusoft/src/view/screens/main/TestingScreenAuto.kv
@@ -12,6 +12,38 @@
             pos: self.pos
             size: self.size
 
+<HeightChangeConfirmDialog>:
+    size_hint: (0.55, 0.77)
+    markup: True
+    bold: True
+    title: 'Save Tests'
+    title_align: 'center'
+    title_size: '26sp'
+    # size_hint: (0.5, 0.7)
+    BoxLayout:
+        orientation: 'vertical'
+        Label:
+            font_size: 26
+            markup: True
+            bold: True
+            halign: 'left'
+            text: "To save tests to USB:\n      select 'Save to USB'\nTo select another save location:\n      select 'Choose Location'\nTo cancel:\n      select 'Cancel'"
+        BoxLayout:
+            orientation: 'horizontal'
+            size_hint_y: None
+            size_hint_x: 1
+            height: 65
+            NavButton:
+                text: "Cancel"
+                on_release: root.cancel()
+            NavButton:
+                text: "Choose\nLocation"
+                on_release: root.pathSelector()
+            NavButton:
+                text: "Save to\nUSB"
+                on_release: root.save('/mnt/usbStick')
+
+
 <TestingScreenAuto>:
 	name: 'testing_screen_auto'
     GranuContainer:
