--- a/Granusoft/src/view/screens/main/testing/TestingResultsScreen.kv
+++ b/Granusoft/src/view/screens/main/testing/TestingResultsScreen.kv
@@ -15,7 +15,7 @@
 <TestingResultsScreen>:
 	name: 'testing_results_screen'
     GranuContainer:
-        GranuSideArea:
+        GranuSideAreaTest:
             GranuSideButton:
                 text: 'Update\nNotes'
 	    		on_release:
@@ -33,6 +33,11 @@
 	    		on_release:
                     root.save_post_notes()
                     root.move_to('save_screen') # Move to saving screen
+            GranuSideButton:
+                text: 'Toggle'
+	    		on_release:
+                    root.toggle_button()
+
         GranuContent:
             GranuTitle:
                 text: 'Testing Results'
@@ -58,10 +63,10 @@
                         id: graph_test
                         plot: MeshLinePlot
                         background_color: 0, 0, 0, 1
-                        xlabel:'Pot Angle (deg)'
+                        xlabel: root.xlabel
                         ylabel:'Force (lbs)'
-                        x_ticks_major:root.x_major
-                        y_ticks_major:root.y_major
+                        x_ticks_major: root.xmajor
+                        y_ticks_major: root.y_major
                         y_grid_label:True
                         x_grid_label:True
                         #padding:5
@@ -69,5 +74,5 @@
                         y_grid:True
                         xmin:0
                         ymin:0
-                        xmax:root.x_max
+                        xmax:root.xmax
                         ymax:root.y_max
