--- a/Granusoft/src/view/screens/main/MainScreen.kv
+++ b/Granusoft/src/view/screens/main/MainScreen.kv
@@ -23,7 +23,7 @@
             GranuSideButton:
                 text: 'Testing'
                 on_release:
-                    background_color: (0, 0, 1, 1)
+                    color: (0, 0, 1, 1)
                     root.move_to('test_settings_confirmation') # Moves to test settings confirmation
             GranuSideButton:
                 text: 'Live Feed'
