Export feature now solved

--- a/Granusoft/src/view/screens/main/MainScreen.kv
+++ b/Granusoft/src/view/screens/main/MainScreen.kv
@@ -57,7 +57,7 @@
                     text: 'Date: \n' + root.current_date
                 MainScreenInfoBox:
                     id: load_cell_height
-                    text: 'Load Cell Height: \n' + root.load_cell_height+root.loadCellHeightUnits
+                    text: 'Height: \n' + root.load_cell_height+root.loadCellHeightUnits
                 MainScreenInfoBox:
                     id: location
                     text: 'Location:\n' + root.location
