Consolidate all local changes before switching to new repository
- Multiple file modifications across the codebase
- Preserving current state before repository migration
- All changes committed locally only

--- a/Granusoft/src/main.kv
+++ b/Granusoft/src/main.kv
@@ -21,11 +21,14 @@
 #:import ArchiveScreen view.screens.settings.ArchiveScreen
 #:import TestDeleteConfirmation view.screens.settings.TestDeleteConfirmation
 
+#:import TestNotesScreen view.screens.settings.TestNotesScreen
 #:import NewNoteScreen view.screens.settings.NewNoteScreen
+#:import NewTestNoteScreen view.screens.settings.NewTestNoteScreen
 
 #:import CalibrateScreen view.screens.settings.CalibrateScreen
 #:import IMUCalibrateScreen view.screens.settings.IMUCalibrateScreen
 #:import CalibratePointScreen view.screens.settings.CalibratePointScreen
+
 
 #:import TestInProgressScreen view.screens.main.testing.TestInProgressScreen
 #:import TestingResultsScreen view.screens.main.testing.TestingResultsScreen
@@ -44,6 +47,7 @@
 #:import TestFoldersScreen view.screens.main.testing.TestFoldersScreen
 #:import DeleteFolderConfirmation view.screens.main.testing.DeleteFolderConfirmation
 #:import RenameFolderScreen view.screens.main.testing.RenameFolderScreen
+#:import HeightChangeConfirmation view.screens.main.testing.HeightChangeConfirmation 
 
 #:import CameraMainScreen view.screens.camera.CameraMainScreen
 #:import CameraFeedScreen view.screens.camera.CameraFeedScreen
@@ -75,9 +79,11 @@
     GPSMapScreen:
     ArchiveScreen:
     TestDeleteConfirmation:
+    TestNotesScreen:
 
     # Settings - Notes
     NewNoteScreen:
+    NewTestNoteScreen:
 
     # Settings - Sensors
     CalibrateScreen:
@@ -102,6 +108,7 @@
     TestFoldersScreen:
     DeleteFolderConfirmation:
     RenameFolderScreen:
+    HeightChangeConfirmation:
 
     # Camera Interface
     CameraMainScreen:
