Added the Archive Test Screen.

--- a/Granusoft/src/main.kv
+++ b/Granusoft/src/main.kv
@@ -19,6 +19,7 @@
 #:import UpdateScreen view.screens.settings.UpdateScreen
 #:import GPSMapScreen view.screens.settings.GPSMapScreen
 #:import ArchiveScreen view.screens.settings.ArchiveScreen
+#:import ArchiveTestFoldersScreen view.screens.settings.ArchiveTestFoldersScreen
 #:import TestDeleteConfirmation view.screens.settings.TestDeleteConfirmation
 
 #:import TestNotesScreen view.screens.settings.TestNotesScreen
@@ -78,6 +79,7 @@
     UpdateScreen:
     GPSMapScreen:
     ArchiveScreen:
+    ArchiveTestFoldersScreen:
     TestDeleteConfirmation:
     TestNotesScreen:
 
