--- a/Granusoft/src/view/screens/main/SettingsScreen.kv
+++ b/Granusoft/src/view/screens/main/SettingsScreen.kv
@@ -100,7 +100,7 @@
                 SettingsButton:
                     text: 'Test\nArchive\nFolder'
                     on_release:
-                        root.move_to('archive_screen')
+                        root.move_to('archive_testing_folders_screen')
             StackLayout:
                 orientation: 'rl-bt'
                 size_hint_y: None
